--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,15 @@
 language: php
 
 php:
-  - 5.6
   - 7.0
   - 7.1
   - 7.2
 
 env:
-  - SYMFONY_VERSION="3.2.*"
   - SYMFONY_VERSION="3.3.*"
   - SYMFONY_VERSION="3.4.*"
   - SYMFONY_VERSION="4.0.*"
-  - SYMFONY_VERSION="4.1-dev"
+  - SYMFONY_VERSION="4.1.x-dev"
 
 matrix:
   exclude:
