--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
     - php: 7.0
       env: SYMFONY_VERSION="4.0.*"
     - php: 7.0
-      env: SYMFONY_VERSION="4.1-dev"
+      env: SYMFONY_VERSION="4.1.x-dev"
 
 sudo: false
 
