--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
     }
   },
   "require": {
-    "php": "^5.6||^7.0",
+    "php": "^5.6|^7.0",
     "sonata-project/admin-bundle": "^3.0",
-    "symfony/workflow": "^3.2|^4.0"
+    "symfony/workflow": "^3.2|^4.0|^5.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.0"
