--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,14 @@ php:
   - 7.1
   - 7.2
   - 7.3
+  - 7.4
 
 env:
   - SYMFONY_VERSION="3.4.*"
   - SYMFONY_VERSION="4.2.*"
   - SYMFONY_VERSION="4.3.*"
+  - SYMFONY_VERSION="4.4.*"
+  - SYMFONY_VERSION="5.0.*"
 
 matrix:
   exclude:
@@ -18,6 +21,13 @@ matrix:
       env: SYMFONY_VERSION="4.2.*"
     - php: 7.0
       env: SYMFONY_VERSION="4.3.*"
+    - php: 7.0
+      env: SYMFONY_VERSION="4.4.*"
+    - php: 7.0
+      env: SYMFONY_VERSION="5.0.*"
+    # Symfony >= 5.0 PHP requirement is ^7.2.5
+    - php: 7.1
+      env: SYMFONY_VERSION="5.0.*"
 
 sudo: false
 
