--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,13 @@
     }
   },
   "require": {
-    "php": "^5.6||^7.0",
+    "php": "^5.6|^7.0",
     "sonata-project/admin-bundle": "^3.0",
-    "symfony/workflow": "^3.2|^4.0"
+    "symfony/workflow": "^3.2|^4.0|^5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.0"
+    "phpunit/phpunit": "^5.0",
+    "symfony/translation": "^3.4|^4.0|^5.0"
   },
   "minimum-stability": "stable",
   "extra": {
