--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ cache:
 
 before_install:
   - rm -rf composer.lock vendor/
-  - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/workflow:${SYMFONY_VERSION}" --no-update; fi;
+  - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/workflow:${SYMFONY_VERSION}" "symfony/translation:${SYMFONY_VERSION}" --no-update; fi;
 
 install: COMPOSER_MEMORY_LIMIT=-1 travis_retry composer install --prefer-dist --no-interaction
 
