--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,7 @@
     "symfony/workflow": "^3.2|^4.0|^5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.0",
-    "symfony/translation": "^3.4|^4.0|^5.0"
+    "phpunit/phpunit": "^5.0"
   },
   "minimum-stability": "stable",
   "extra": {
