--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
   "minimum-stability": "stable",
   "extra": {
     "branch-alias": {
-      "dev-master": "0.3.x-dev"
+      "dev-0.x": "0.3.x-dev"
     }
   }
 }
