--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "symfony/workflow": "^3.2|^4.0|^5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.0"
+    "phpunit/phpunit": "^5.0",
+    "squizlabs/php_codesniffer": "^3.5"
   },
   "minimum-stability": "stable",
   "extra": {
