--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,12 @@
     }
   },
   "require": {
-    "php": "^5.6|^7.0",
+    "php": "^7.1",
     "sonata-project/admin-bundle": "^3.0",
-    "symfony/workflow": "^3.2|^4.0|^5.0"
+    "symfony/workflow": "^4.4|^5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.0",
+    "phpunit/phpunit": "^7.5",
     "squizlabs/php_codesniffer": "^3.5"
   },
   "minimum-stability": "stable",
