--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,6 +45,12 @@ jobs:
     name: "Checkstyle"
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        include:
+          - php-version: 7.4
+            symfony-version: 5.1.*
+
     steps:
       - name: "Checkout"
         uses: actions/checkout@v2
