--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,8 @@ jobs:
             symfony-version: 5.1.*
           - php-version: 7.4
             symfony-version: 5.1.*
+          - php-version: 8.0
+            symfony-version: 5.1.*
 
     steps:
       - name: "Checkout"
@@ -48,7 +50,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - php-version: 7.4
+          - php-version: 8.0
             symfony-version: 5.1.*
 
     steps:
@@ -75,7 +77,7 @@ jobs:
     strategy:
       matrix:
         include:
-          - php-version: 7.4
+          - php-version: 8.0
             symfony-version: 5.1.*
 
     steps:
