--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,12 @@
     }
   },
   "require": {
-    "php": "^7.1",
+    "php": "^7.3|^8.0",
     "sonata-project/admin-bundle": "^3.0",
     "symfony/workflow": "^4.4|^5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.5",
+    "phpunit/phpunit": "^8.5|^9.5",
     "squizlabs/php_codesniffer": "^3.5"
   }
 }
