--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,12 +16,19 @@ jobs:
         include:
           - php-version: 7.3
             symfony-version: 4.4.*
+            sonata-version: ^3.0
           - php-version: 7.3
             symfony-version: 5.2.*
+            sonata-version: ^3.0
           - php-version: 7.4
             symfony-version: 5.2.*
+            sonata-version: ^3.0
           - php-version: 8.0
             symfony-version: 5.2.*
+            sonata-version: ^3.0
+          - php-version: 8.0
+            symfony-version: 5.2.*
+            sonata-version: 4.x-dev@dev
 
     steps:
       - name: "Checkout"
@@ -36,6 +43,7 @@ jobs:
       - name: "Install dependencies with composer"
         run: |
           composer require --no-update symfony/workflow:${{ matrix.symfony-version }}
+          composer require --no-update sonata-project/admin-bundle:${{ matrix.sonata-version }}
           composer update --no-interaction --no-progress --no-suggest
 
       - name: "Run tests with phpunit/phpunit"
