--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^8.5|^9.5",
-    "squizlabs/php_codesniffer": "^3.5"
+    "squizlabs/php_codesniffer": "^3.5",
+    "phpspec/prophecy-phpunit": "^2.0"
   }
 }
