--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "symfony/workflow": "^4.4|^5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5|^9.5",
+    "phpunit/phpunit": "^9.5",
     "squizlabs/php_codesniffer": "^3.5",
     "phpspec/prophecy-phpunit": "^2.0"
   }
