--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,13 @@
     }
   },
   "require": {
-    "php": "^7.3|^8.0",
-    "sonata-project/admin-bundle": "^3.0",
+    "php": "^7.4|^8.0",
+    "sonata-project/admin-bundle": "^4.0",
     "symfony/workflow": "^4.4|^5.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5|^9.5",
-    "squizlabs/php_codesniffer": "^3.5"
+    "phpunit/phpunit": "^9.5",
+    "squizlabs/php_codesniffer": "^3.5",
+    "phpspec/prophecy-phpunit": "^2.0"
   }
 }
