--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
   "require": {
     "php": "^7.4|^8.0",
     "sonata-project/admin-bundle": "^4.0",
-    "symfony/workflow": "^4.4|^5.0"
+    "symfony/workflow": "^4.4|^5.0|^6.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
