--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,6 +24,9 @@ jobs:
           - php-version: 8.1
             symfony-version: 6.1.*
             sonata-version: ^4.0
+          - php-version: 8.3
+            symfony-version: 7.2.*
+            sonata-version: ^4.0
 
     steps:
       - name: "Checkout"
