--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
     }
   },
   "require": {
-    "php": "^7.4|^8.0",
+    "php": "^8.0",
     "sonata-project/admin-bundle": "^4.0",
-    "symfony/workflow": "^4.4|^5.0|^6.0|^7.0"
+    "symfony/workflow": "^6.0|^7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
